//------------------------------------------------------------------------------
// {C} Copyright 2018 Pensando Systems Inc. All rights reserved
//
// protobuf specification for IO Test Automation Common Message Types
//------------------------------------------------------------------------------
syntax = "proto3";
package iotamodel;

import public "gogo.proto";

message ConfigInfo {
    // All the user visible objects that need to be pushed.
    repeated ConfigObject objects = 1;
}


message ConfigObject{
    enum CfgMethodType {
        NONE            = 0;
        CREATE          = 1;
        UPDATE          = 2;
        DELETE          = 3;
    }
    // Method indicates the REST method to call on the object.
    CfgMethodType       method = 1;

    // Config captures the Marshaled JSON object
    string              Config = 3;
}
